--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+
+  "scripts": {
+    "tailwind-watch":" npx tailwindcss -i src/tailwind.css -o src/style.css --watch"
+  },
   "dependencies": {
     "tailwindcss": "^3.3.2"
   }
